feat: Working on M3 nav bar component.
- Commenting out chunks of app for now.

Issue #96

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <div class="content-container" [class.large]="!(isMobile$ | async)" [class.with-tabs]="hasAnythingStarted$ | async">
   <router-outlet></router-outlet>
 </div> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<mm-navigation-bar></mm-navigation-bar>
