--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
   <router-outlet></router-outlet>
 </div> -->
 <!-- <router-outlet></router-outlet> -->
-<mm-bottom-nav></mm-bottom-nav>
+<mm-nav [railMode]="!(isHandset$ | async)"></mm-nav>
