--- a/src/app/core/components/nav/nav.component.html
+++ b/src/app/core/components/nav/nav.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
-  <div class="mm-footer-section">
+  <div class="mm-nav-section active">
     <mat-icon>people</mat-icon>
     <div>Players</div>
   </div>
-  <div class="mm-footer-section">
+  <div class="mm-nav-section">
     <mat-icon>people</mat-icon>
     <div>Players</div>
   </div>
-  <div class="mm-footer-section">
+  <div class="mm-nav-section">
     <mat-icon>people</mat-icon>
     <div>Players</div>
   </div>
