--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,16 +1,21 @@
 @use '@angular/material' as mat;
+@use 'nav-theme' as nav;
+
 @include mat.core();
 
 $primary-palette: mat.define-palette(mat.$blue-palette, 400);
 $accent-palette: mat.define-palette(mat.$green-palette, A200, A100, A400);
+$typography: mat.define-typography-config();
 
 $mm-theme: mat.define-light-theme(
   (
     color: (
       primary: $primary-palette,
       accent: $accent-palette
-    )
+    ),
+    typography: $typography
   )
 );
 
 @include mat.all-component-themes($mm-theme);
+@include nav.theme($mm-theme);
