--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,10 @@
 // @use 'sass/layout/sizing';
 // @use 'sass/layout/spacing';
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @use 'custom-theme.scss' as theme;
 
 $theme: theme.$mirror-match-theme;
