--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
   <router-outlet></router-outlet>
 </div> -->
 <!-- <router-outlet></router-outlet> -->
-<mm-nav [railMode]="!(isHandset$ | async)"></mm-nav>
+<!-- <mm-nav class="bg-white" [railMode]="!(isHandset$ | async)"></mm-nav> -->
+<div>
+  <h1 class="text-primary text-3xl font-bold underline">hello</h1>
+</div>
