--- a/src/app/core/components/page-not-found/page-not-found.component.html
+++ b/src/app/core/components/page-not-found/page-not-found.component.html
@@ -1,5 +1,5 @@
 <div class="mm-page-not-found-container">
-  <mat-card>
+  <!-- <mat-card>
     <mat-card-title>404: Not Found</mat-card-title>
     <mat-card-content>
       <p>It looks like this page doesn't exist.</p>
@@ -7,5 +7,5 @@
     <mat-card-actions>
       <button mat-stroked-button color="primary" routerLink="/">Home</button>
     </mat-card-actions>
-  </mat-card>
+  </mat-card> -->
 </div>
