--- a/src/app/players/components/setup-footer/setup-footer.component.scss
+++ b/src/app/players/components/setup-footer/setup-footer.component.scss
@@ -1,21 +1,21 @@
-@use 'sass:math';
-@import 'abstracts/variables';
+// @use 'sass:math';
+// @import 'abstracts/variables';
 
-@mixin fab-bottom($toolbar-height) {
-  bottom: $toolbar-height - math.div($mat-fab-size, 2);
-}
+// @mixin fab-bottom($toolbar-height) {
+//   bottom: $toolbar-height - math.div($mat-fab-size, 2);
+// }
 
-.fab {
-  position: fixed;
-  left: calc(50% - (#{$mat-fab-size} / 2));
+// .fab {
+//   position: fixed;
+//   left: calc(50% - (#{$mat-fab-size} / 2));
 
-  @include fab-bottom(64px);
+//   @include fab-bottom(64px);
 
-  @media (max-width: 599px) {
-    @include fab-bottom(56px);
-  }
-}
+//   @media (max-width: 599px) {
+//     @include fab-bottom(56px);
+//   }
+// }
 
-.spacer {
-  flex: 1 1;
-}
+// .spacer {
+//   flex: 1 1;
+// }
