feat(setup): Working on new setup module.
- Had to comment out more old code to get things to compile.
- Creating TopAppBar component.

Issue #96

--- a/src/app/shared/components/fab/fab.component.html
+++ b/src/app/shared/components/fab/fab.component.html
@@ -1,7 +1,7 @@
-<button
+<!-- <button
   mat-raised-button
   [color]="color"
   class="fab-button"
 >
   <ng-content></ng-content>
-</button>
+</button> -->
