--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<!-- <mat-form-field>
   <input
     matInput
     type="search"
@@ -8,4 +8,4 @@
     (input)="doSearch()"
     (keyup)="doSearch()"
   />
-</mat-form-field>
+</mat-form-field> -->
