--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,5 @@
 <div class="content-container" [class.large]="!(isMobile$ | async)" [class.with-tabs]="hasAnythingStarted$ | async">
   <router-outlet></router-outlet>
 </div> -->
-<!-- <router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <!-- <mm-nav class="bg-white" [railMode]="!(isHandset$ | async)"></mm-nav> -->
-<div>
-  <h1 class="text-primary text-3xl font-bold underline">hello</h1>
-</div>
