feat(shared): Working on TopAppBar.
- Adding tailwind prettier plugin.
- Fixing issue in the tokens file that all the typography tokens had
  rem instead of px.
- Styling TopAppBar.

Issue #96

--- a/src/app/shared/components/top-app-bar/top-app-bar.component.html
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.html
@@ -1,5 +1,7 @@
-<div class="bg-surface h-16 flex items-center justify-center">
-  <div class="flex-initial">
+<div class="flex h-16 items-center justify-center bg-surface">
+  <div
+    class="flex-initial font-title-large text-title-large leading-title-large text-on-surface"
+  >
     <ng-content></ng-content>
   </div>
 </div>
