--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,26 +16,26 @@
 // // );
 // $nav-link-height: 48px;
 
-// :host {
-//   background-color: mat.get-color-from-palette($background, background);
-//   display: flex;
-//   flex-direction: column;
-//   min-height: 100%;
+:host {
+  background-color: var(--md-sys-color-surface);
+  display: block;
+  // flex-direction: column;
+  min-height: 100%;
 
-//   // .content-container {
-//   //   margin-top: $height-mobile;
-//   //   width: 100%;
+  // .content-container {
+  //   margin-top: $height-mobile;
+  //   width: 100%;
 
-//   //   &.large {
-//   //     margin-top: $height-desktop;
-//   //   }
+  //   &.large {
+  //     margin-top: $height-desktop;
+  //   }
 
-//   //   &.with-tabs {
-//   //     margin-top: $height-mobile + $nav-link-height;
-//   //   }
+  //   &.with-tabs {
+  //     margin-top: $height-mobile + $nav-link-height;
+  //   }
 
-//   //   &.large.with-tabs {
-//   //     margin-top: $height-desktop + $nav-link-height;
-//   //   }
-//   // }
-// }
+  //   &.large.with-tabs {
+  //     margin-top: $height-desktop + $nav-link-height;
+  //   }
+  // }
+}
