--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,2 +1,66 @@
-<mm-top-app-bar> MirrorMatch </mm-top-app-bar>
-<p>setup works!</p>
+<div class="flex max-h-screen flex-col">
+  <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
+  <div class="flex-grow overflow-y-auto">
+    <p>setup works!</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+    <p>abc</p>
+  </div>
+</div>
