feat(setup|shared): Work on top app bar.
- Fiddling with getting the scrolling working better
- Starting on figuring out scroll event stuff

Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,6 +1,6 @@
-<div class="flex max-h-screen flex-col">
+<div class="flex flex-col">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
-  <div class="flex-grow overflow-y-auto">
+  <div>
     <p>setup works!</p>
     <p>abc</p>
     <p>abc</p>
