--- a/src/app/shared/components/top-app-bar/top-app-bar.component.html
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.html
@@ -1,7 +1,8 @@
-<div class="flex h-16 items-center justify-center bg-surface">
+<header class="fixed flex h-16 w-full items-center justify-center bg-surface">
   <div
     class="flex-initial font-title-large text-title-large leading-title-large text-on-surface"
   >
     <ng-content></ng-content>
   </div>
-</div>
+</header>
+<div class="pt-16"></div>
