feat(setup|shared): WIP top app bar
- Removing tailwind. Still hate it.
- Getting app bar to tint on scroll.

Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col">
+<div class="setup-page">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
     <p>setup works!</p>
