--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,7 +1,7 @@
 body,
 html {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   overflow-x: hidden;
 }
