feat(setup|shared): Starting on card component
Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,66 +1,9 @@
 <div class="setup-page">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
-    <p>setup works!</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
-    <p>abc</p>
+    <mm-card>
+      <h1 headline>Swiss</h1>
+      <p>Swiss pairings blah blah blah.</p>
+    </mm-card>
   </div>
 </div>
