feat(setup|shared): Mostly fiddling with styles.
- Changing how card content works a bit.
- Adding some scss functions/mixins for less duplication and converting
to rem.

Issue #96

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,4 @@
-@import 'reset';
-@import 'tokens/reference';
-@import 'tokens/system';
+@use 'reset';
+@use 'tokens/reference';
+@use 'tokens/system';
+@use 'typography';
