--- a/src/styles/tokens/_reference.scss
+++ b/src/styles/tokens/_reference.scss
@@ -79,5 +79,7 @@
   --mm-ref-palette-error-0: #000000;
 
   --mm-ref-typeface-brand: Roboto, sans-serif;
-  --mm-ref-typeface-weight: 400;
+  --mm-ref-typeface-plain: Roboto, sans-serif;
+  --mm-ref-typeface-weight-regular: 400;
+  --mm-ref-typeface-weight-medium: 500;
 }
