--- a/src/styles/tokens/_system.scss
+++ b/src/styles/tokens/_system.scss
@@ -1,4 +1,31 @@
+@use 'sass:math';
+
 :root {
+  @function letter-spacing($tracking, $font-size) {
+    @return math.div($tracking, $font-size) + 'rem';
+  }
+
+  @function size($sp_size) {
+    @return math.div($sp_size, 16) + 'rem';
+  }
+
+  @mixin typescale_tokens(
+    $name,
+    $typeface,
+    $line-height,
+    $size,
+    $tracking,
+    $weight
+  ) {
+    --mm-sys-typescale-#{$name}-family: var(--mm-ref-typeface-#{$typeface});
+    --mm-sys-typescale-#{$name}-line-height: #{size($line-height)};
+    --mm-sys-typescale-#{$name}-size: #{size($size)};
+    --mm-sys-typescale-#{$name}-tracking: #{letter-spacing($tracking, $size)};
+    --mm-sys-typescale-#{$name}-weight: var(
+      --mm-ref-typeface-weight-#{$weight}
+    );
+  }
+
   --mm-sys-color-primary: var(--mm-ref-palette-primary-40);
   --mm-sys-color-surface: var(--mm-ref-palette-neutral-99);
   --mm-sys-color-surface-variant: var(--mm-ref-palette-neutral-variant-90);
@@ -12,10 +39,9 @@
   //   --mm-sys-color-on-surface: var(--mm-ref-palette-neutral-90);
   // }
 
-  --mm-sys-typescale-title-large-family: var(--mm-ref-typeface-brand);
-  --mm-sys-typescale-title-large-line-height: 28px;
-  --mm-sys-typescale-title-large-size: 22px;
-  --mm-sys-typescale-title-large-weight: var(--mm-ref-typeface-weight);
+  @include typescale_tokens(title-large, brand, 28, 22, 0, regular);
+  @include typescale_tokens(title-medium, plain, 24, 16, 0.15, medium);
+  @include typescale_tokens(title-small, plain, 20, 14, 0.1, medium);
 
   --mm-sys-elevation-surface-1: 0.05;
   --mm-sys-elevation-surface-2: 0.08;
