--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -2,8 +2,8 @@
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
     <mm-card>
-      <h1 headline>Swiss</h1>
-      <p>Swiss pairings blah blah blah.</p>
+      <div class="mm-title-medium">Swiss</div>
+      <div>Swiss pairings blah blah blah.</div>
     </mm-card>
   </div>
 </div>
