--- a/src/app/shared/components/top-app-bar/top-app-bar.component.html
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.html
@@ -1,5 +1,5 @@
 <header class="top-app-bar">
-  <div class="content">
+  <div class="content mm-title-large">
     <ng-content></ng-content>
   </div>
   <div class="overlay" [class.overlay-scrolled]="scrolled"></div>
