feat: More style organization.
Issue #96

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@
 // $nav-link-height: 48px;
 
 :host {
-  background-color: var(--mm-sys-color-surface);
+  background-color: var(--mm-color-surface);
   display: block;
   // flex-direction: column;
   min-height: 100%;
