--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,6 @@
 @use 'reset';
-@use 'tokens/reference';
-@use 'tokens/system';
-@use 'typography';
+@use 'abstracts/variables';
+@use 'abstracts/functions';
+@use 'abstracts/mixins';
+@use 'base/typography';
+@use 'themes/theme';
