--- a/src/app/shared/components/top-app-bar/top-app-bar.component.scss
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.scss
@@ -3,7 +3,7 @@
 }
 
 .top-app-bar {
-  background-color: var(--mm-sys-color-surface);
+  background-color: var(--mm-color-surface);
   display: flex;
   width: 100%;
   height: 64px;
@@ -12,12 +12,12 @@
   align-items: center;
 
   .content {
-    color: var(--mm-sys-color-on-surface);
+    color: var(--mm-color-on-surface);
   }
 
   .overlay {
     position: absolute;
-    background-color: var(--mm-sys-color-primary);
+    background-color: var(--mm-color-primary);
     inset: 0;
     pointer-events: none;
     opacity: 0;
