feat(setup|shared): Work on Cards.
Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,7 +1,7 @@
 <div class="setup-page">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
-    <mm-card>
+    <mm-card tabindex="0">
       <div class="mm-title-medium">Swiss</div>
       <div>Swiss pairings blah blah blah.</div>
     </mm-card>
