style: Adding more styles.
- Fixing a bug for weight/family in my mixin.

Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -2,8 +2,8 @@
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
     <mm-card tabindex="0">
-      <div class="mm-title-medium">Swiss</div>
-      <div>Swiss pairings blah blah blah.</div>
+      <div class="mm-headline-small">Swiss</div>
+      <div class="mm-title-medium">Swiss pairings blah blah blah.</div>
     </mm-card>
   </div>
 </div>
