--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -84,7 +84,7 @@
   line-height: sp-size-to-rem(map.get($typescale-map, 'line-height'));
   letter-spacing: letter-spacing(map.get($typescale-map, 'tracking'), $size);
   font: {
-    family: map.get($typeface, map.get($typescale-map, 'family'));
-    weight: map.get($typeface, map.get($typescale-map, 'weight'));
+    family: map.get($typeface, 'family', map.get($typescale-map, 'family'));
+    weight: map.get($typeface, 'weight', map.get($typescale-map, 'weight'));
   }
 }
