--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -4,40 +4,40 @@
 @use '../abstracts/mixins' as *;
 
 .mm-headline-large {
-  @include typescale(map.get($typescale, 'headline', 'large'));
+  @include typescale('headline', 'large');
 }
 
 .mm-headline-medium {
-  @include typescale(map.get($typescale, 'headline', 'medium'));
+  @include typescale('headline', 'medium');
 }
 
 .mm-headline-small {
-  @include typescale(map.get($typescale, 'headline', 'small'));
+  @include typescale('headline', 'small');
 }
 
 h4,
 .mm-title-large {
-  @include typescale(map.get($typescale, 'title', 'large'));
+  @include typescale('title', 'large');
 }
 
 h5,
 .mm-title-medium {
-  @include typescale(map.get($typescale, 'title', 'medium'));
+  @include typescale('title', 'medium');
 }
 
 h6,
 .mm-title-small {
-  @include typescale(map.get($typescale, 'title', 'small'));
+  @include typescale('title', 'small');
 }
 
 .mm-body-large {
-  @include typescale(map.get($typescale, 'body', 'large'));
+  @include typescale('body', 'large');
 }
 
 .mm-body-medium {
-  @include typescale(map.get($typescale, 'body', 'medium'));
+  @include typescale('body', 'medium');
 }
 
 .mm-body-small {
-  @include typescale(map.get($typescale, 'body', 'small'));
+  @include typescale('body', 'small');
 }
