--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,9 +1,9 @@
 <div class="setup-page">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
   <div>
-    <mm-card tabindex="0">
-      <div class="mm-headline-small">Swiss</div>
-      <div class="mm-title-medium">Swiss pairings blah blah blah.</div>
+    <mm-card *ngFor="let card of cards" tabindex="0">
+      <div class="mm-title-medium">{{ card.title }}</div>
+      <div class="mm-body-medium">{{ card.body }}</div>
     </mm-card>
   </div>
 </div>
