feat(setup): Cleaning up setup cards.
- Tweaking typography
- Making flex responsive to screen size
- Adding disabled functionality to cards.

Issue #96

--- a/src/app/setup/setup.component.html
+++ b/src/app/setup/setup.component.html
@@ -1,9 +1,9 @@
 <div class="setup-page">
   <mm-top-app-bar>MirrorMatch</mm-top-app-bar>
-  <div>
-    <mm-card *ngFor="let card of cards" tabindex="0">
-      <div class="mm-title-medium">{{ card.title }}</div>
-      <div class="mm-body-medium">{{ card.body }}</div>
+  <div class="cards-container">
+    <mm-card *ngFor="let card of cards" [disabled]="card.disabled" tabindex="0">
+      <div class="mm-headline-small">{{ card.title }}</div>
+      <div class="mm-body-small">{{ card.body }}</div>
     </mm-card>
   </div>
 </div>
