--- a/src/app/shared/components/top-app-bar/top-app-bar.component.scss
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.scss
@@ -4,16 +4,13 @@
 
 .top-app-bar {
   background-color: var(--mm-color-surface);
+  color: var(--mm-color-on-surface);
   display: flex;
   width: 100%;
   height: 64px;
   position: fixed;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-
-  .content {
-    color: var(--mm-color-on-surface);
-  }
 
   .overlay {
     position: absolute;
@@ -26,5 +23,10 @@
     &-scrolled {
       opacity: var(--mm-sys-elevation-surface-2);
     }
+  }
+
+  .prefix,
+  .suffix {
+    width: 3em;
   }
 }
