issue #115: Creating an icon component.

--- a/src/app/setup/containers/add-players-page/add-players-page.component.html
+++ b/src/app/setup/containers/add-players-page/add-players-page.component.html
@@ -1,8 +1,6 @@
 <mm-top-app-bar>
   Add Players
-  <button icon>
-    <span class="material-icons">arrow_back</span>
-  </button>
+  <mm-icon prefix>arrow_back</mm-icon>
 </mm-top-app-bar>
 <mm-list>
   <mm-list-item *ngFor="let player of players">player</mm-list-item>
