--- a/src/app/shared/components/top-app-bar/top-app-bar.component.html
+++ b/src/app/shared/components/top-app-bar/top-app-bar.component.html
@@ -1,6 +1,6 @@
 <header class="top-app-bar">
   <div class="prefix">
-    <ng-content select="[icon]"></ng-content>
+    <ng-content select="[prefix]"></ng-content>
   </div>
   <div class="content mm-title-large">
     <ng-content></ng-content>
